# mdllosstorch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  JQ_REQUIREMENT.txt  Makefile  README.GitHubWorkflows.md  README.developers.md  README.maintainers.md  README.md  README.users.md  THEORY.md  constraints.txt  dev.in  mdl_loss_separated.py  mdl_loss_torch.py  mdllosstorch_api.md  mkdocs.yml  pyproject.toml  pytest.ini  recursive_mdl_training.py  requirements-dev.txt  test_census_integration.py
.github/workflows/: ci.yml  nightly-canary.yml  release.yml
docs/: MDL_MODES.md
scripts/: apply_branch_protection.sh  check_metadata.py  constraints_piptools.sh  constraints_uv.sh  dailydev.bash  dev_install.sh  dev_update_constraints.sh  dev_verify.sh  run_census_mdl.py  soak_pyproject.sh
src/mdllosstorch/: __init__.py  debug_logging.py  mdlloss.py  parallel_sa.py  parameters.py  residuals.py
tests/: README.census.md  county_data.py  test_census_integration.py  test_census_integration_no_model.py  test_gauss_nml.py  test_mdllosstorch.py  test_parallel_sa_census.py  util_census.py
tests/Ref/: MastdataExtended.csv
