[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdllosstorch"
version = "0.1.0"
description = "MDL loss components for PyTorch: transformed residuals (Yeo-Johnson/Box-Cox + Jacobian) and Student-t parameter bits, with discretization for positivity."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "MDL Labs" }]

# Runtime dependencies (minimal, permissive)
dependencies = [
  "torch>=2.0",
  "numpy",
]

[project.optional-dependencies]
# Developer / test stack
dev = [
  "pytest>=8",
  "pytest-env>=1.1.5",        # set env vars from pyproject for tests
  "ruff>=0.5",
  "black>=24",
  "mypy>=1",
  "pre-commit>=3.5",
  "tox>=4",
  "build>=1.2",
  "twine>=5",
  "pip-tools>=7",
  "uv>=0.3",
  "validate-pyproject>=0.18", # validate pyproject.toml structure
]

# Optional dependency required ONLY for the census integration test(s)
census = [
  "pandas>=2.0",
  "regex",
]

# Docs stack
docs = [
  "mkdocs",
  "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/yourusername/mdllosstorch"
Repository = "https://github.com/yourusername/mdllosstorch"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mdllosstorch*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

# Single source of truth for pytest config
[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow",
]
# Ensure census dataset path is visible to tests
env = [
  "LOTC_CENSUS_BZ2=datasets/LaboratoryOfTheCounties.tsv.bz2",
]
